# Kimera-Multi-LCD

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
cmake/: vocab_download.cmake
include/kimera_multi_lcd/: LcdThirdPartyWrapper.h  LoopClosureDetector.h  io.h  loop_closure_detector.h  serializer.h  types.h  utils.h
src/: LcdThirdPartyWrapper.cpp  LoopClosureDetector.cpp  io.cpp  lcd_third_party.cpp  loop_closure_detector.cpp  serializer.cpp  types.cpp  utils.cpp
test/: test_config.h.in  test_lcd.cpp  test_utils.cpp
