<?xml version="1.0"?>
<package format="2">
  <name>kimera_multi_lcd</name>
  <version>1.0.0</version>
  <description>Kimera-Multi-LCD</description>

  <maintainer email="yunchang@mit.edu">Yun Chang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>dbow2_catkin</depend>
  <depend>gtsam</depend>
  <depend>Eigen</depend>
  <depend>OpenCV</depend>
  <depend>opengv</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>image_transport</depend>
  <depend>pcl_ros</depend>
  <depend>rosbag</depend>
  <depend>cv_bridge</depend>
  <depend>tf</depend>
  <depend>rosunit</depend>
  <depend>rostest</depend>

</package>
